@@ -55,6 +55,7 @@ IPC::Run                                       = 0
 JSON                                           = 0
 JSON::XS                                       = 0
 Lingua::Alphabet::Phonetic::LAPD               = 0
+local::lib                                     = 0
 Log::Log4perl                                  = 0
 
 ; core, but in separate rpms
